Fixed the function that sends an email to the user in the SignIn window

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -18,6 +18,7 @@
         <local:BoolToEnableConverter x:Key="BoolToEnableConverterKey"/>
         <local:BoolToNotEnableConverter x:Key="BoolToNotEnableConverterKey"/>
         <local:ConvertIdTaskToContent x:Key="ConverIdTaskToContentKey"/>
+        <local:ConvertStringToInt x:Key="ConvertStringToIntKey"/>
 
 
     </Application.Resources>
