--- a/PL/User/UserLogIn.xaml
+++ b/PL/User/UserLogIn.xaml
@@ -5,15 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="UserLogIn" Height="200" Width="400"
+        Title="UserLogIn" Height="200" Width="200"
         DataContext="{Binding MyUser, RelativeSource={RelativeSource Self}, Mode=TwoWay}">
 
     <Grid Margin="314,145,0,0">
-        <!--<Label Content="Password" Margin="-240,-75,270,89"  FontFamily="Arial Black" FontSize="8" Background="White"/>
-        <Label Content="UserName"  Margin="-240,-107,270,122" FontFamily="Arial Black" FontSize="8" Background="White"/>
+        <Label Content="Password" Margin="-300,-37,240,49"  FontFamily="Arial Black" FontSize="8" Background="White"/>
+        <Label Content="UserName"  Margin="-295,-66,221,81" FontFamily="Arial Black" FontSize="8" Background="White"/>
+        <Label Content="Id"  Margin="-295,-100,245,115" FontFamily="Arial Black" FontSize="8" Background="White"/>
+        <TextBox  MaxLength="20" Text="{Binding Id, Mode=OneWay , NotifyOnValidationError=true,  ValidatesOnExceptions=true}"  HorizontalAlignment="Left" Margin="-229,-66,0,0" VerticalAlignment="Top" Width="86" Height="19"/>
 
-        <TextBox  MaxLength="20" Text="{Binding UserName, Mode=OneWay , NotifyOnValidationError=true,  ValidatesOnExceptions=true}"  HorizontalAlignment="Left" Margin="-166,-107,0,0" VerticalAlignment="Top" Width="95" Height="19"/>
-        --><!--<TextBox MaxLength="10" Text="{Binding Password, Mode=OneWay , NotifyOnValidationError=true,  ValidatesOnExceptions=true}" HorizontalAlignment="Left" Margin="-166,-72,0,0"   VerticalAlignment="Top" Width="95" Height="19" KeyDown="KeyDownUserSignIn" TextChanged="TextBox_TextChanged"/>--><!--
-        <Button Content="enter" HorizontalAlignment="Left" Margin="28,5,0,0" VerticalAlignment="Top" Click="ChackEmail_Click"/>-->
+        <TextBox  MaxLength="20" Text="{Binding UserName, Mode=OneWay , NotifyOnValidationError=true,  ValidatesOnExceptions=true}"  HorizontalAlignment="Left" Margin="-229,-100,0,0" VerticalAlignment="Top" Width="86" Height="19"/>
+        <TextBox MaxLength="10" Text="{Binding Password, Mode=OneWay , NotifyOnValidationError=true,  ValidatesOnExceptions=true}" HorizontalAlignment="Left" Margin="-229,-33,0,0"   VerticalAlignment="Top" Width="86" Height="19" KeyDown="KeyDownUserSignIn" TextChanged="TextBox_TextChanged"/>
+        <Button Content="enter" HorizontalAlignment="Left" Margin="-241,5,0,0" VerticalAlignment="Top" FontFamily="Arial Black" Background="White" Click="ChackEmail_Click"/>
     </Grid>
 </Window>
