--- a/PL/User/Two_Step_Verification.xaml
+++ b/PL/User/Two_Step_Verification.xaml
@@ -12,8 +12,10 @@
 
         <Button Content="enter" HorizontalAlignment="Left" Margin="-57,0,0,0" VerticalAlignment="Center" Height="18" Width="28" Click="CheckAndOpenUserWindow_click" FontSize="8"/>
 
-        <PasswordBox MaxLength="4" HorizontalAlignment="Left" Margin="-121,-90,0,0"  VerticalAlignment="Top" Width="67" Height="27"
-                     Password="{Binding }" PasswordChar="*" />
+        <TextBox MaxLength="4" HorizontalAlignment="Left" Margin="-121,-90,0,0"  VerticalAlignment="Top" Width="67" Height="27"
+                     Text="{Binding CodeFromEmail ,Mode=OneWay,NotifyOnValidationError=true,  ValidatesOnExceptions=true}" />
+        <!--<PasswordBox MaxLength="4" HorizontalAlignment="Left" Margin="-121,-90,0,0"  VerticalAlignment="Top" Width="67" Height="27"
+                     Password="{Binding}" PasswordChar="*" />-->
         <Button Content="send again" HorizontalAlignment="Left" Margin="-277,-58,0,0" VerticalAlignment="Top" Height="11" Width="41"  FontSize="5" Click="SendEmail_click"/>
         <Button Content="back" HorizontalAlignment="Left" Margin="-301,0,0,0" VerticalAlignment="Center" Height="17" Width="28" RenderTransformOrigin="-2.053,0.447" FontSize="8" Click="BackToSignOrLogW_click"/>
 
