--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -32,7 +32,7 @@
        ItemsSource="{Binding Source={StaticResource TaskStatusKey }}"   
              SelectionChanged="ComboBoxStatusTask_SelectionChanged" />
         </Grid>
-        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick" >
+        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick" MouseLeftButtonUp="ChooceTaskToDelete_click" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -40,7 +40,8 @@
             </ListView.View>
         </ListView>
 
-        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100" Click="ButtonAddNewTask_Click"/>
+        <Button Content="Add" Visibility="{Binding IsFirstStage,Mode=OneWayToSource, Converter={StaticResource BoolToVisibilityConverterKey}}" Grid.Row="1" HorizontalAlignment="Left" Height="50" Width="100" Click="ButtonAddNewTask_Click" Margin="272,356,0,0" Grid.RowSpan="2"/>
+        <Button Content="Delete" Visibility="{Binding DoYouWantToDelete,Mode=OneWay,Converter={StaticResource BoolToVisibilityConverterKey}}" HorizontalAlignment="Left" Margin="422,0,0,0" Grid.Row="2" VerticalAlignment="Center" Height="50" Width="100" Click="DeleteTask_Click"/>
 
     </Grid>
 
