--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -19,14 +19,14 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Chose the filter you want to perform:" HorizontalAlignment="Left" Margin="14,0,0,0"  FontFamily="Arial Black" FontSize="15" VerticalAlignment="Center" Height="32" Width="361"/>
+            <Label Grid.Column="0" Content="Chose the filter you want to perform:" HorizontalAlignment="Left" Margin="141,0,0,0"  FontFamily="Arial Black" FontSize="15" VerticalAlignment="Top" Height="32" Width="361" Grid.ColumnSpan="2"/>
 
             <ComboBox Grid.Column="1"  Margin="229,5,67,5" Visibility="{Binding Bylevel,Mode=OneWay, Converter={StaticResource  BoolToVisibilityConverterKey}}" 
                 ItemsSource="{Binding Source={StaticResource WorkerExperienceCollectionKey }}"   
                       SelectionChanged="ComboBoxLevelTask_SelectionChanged" />
             <ComboBox SelectedValue="{Binding Path=filter, Mode=TwoWay}" ItemsSource="{Binding Source={StaticResource FilterTaskKey}}" Grid.Column="1"  Margin="55,0,225,0" Width="120" SelectionChanged="TaskList_FilterChanged"/>
             <TextBox Margin="200,5,10,4" Grid.Column="1"   Visibility="{Binding ByPossibleTaskforWorker,Mode=OneWay, Converter={StaticResource  BoolToVisibilityConverterKey}}"  KeyDown="TextBoxIdWorkerFilter_KeyDown" />
-            <TextBox Text="{Binding ContentSearch,Mode=OneWay }" TextChanged="ContentSearch_Changed"  Grid.Column="1" HorizontalAlignment="Left" Margin="260,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" />
+            <TextBox Text="{Binding ContentSearch,Mode=OneWay }"  TextChanged="ContentSearch_Changed" HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120"  />
 
             <ComboBox Grid.Column="1"  Margin="229,5,67,5" Visibility="{Binding ByStatus ,Mode=OneWay, Converter={StaticResource  BoolToVisibilityConverterKey}}" 
        ItemsSource="{Binding Source={StaticResource TaskStatusKey }}"   
